--- a/src/scripts/debugging/pmap/passing_pmapped_vars_test.ipynb
+++ b/src/scripts/debugging/pmap/passing_pmapped_vars_test.ipynb
@@ -91,12 +91,12 @@
       "n_devices \t\t 4\n",
       "save_every \t\t 1000\n",
       "print_every \t\t 0\n",
-      "exp_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run7\n",
-      "events_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run7/events\n",
-      "models_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run7/models\n",
-      "opt_state_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run7/models/opt_state\n",
+      "exp_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run10\n",
+      "events_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run10/events\n",
+      "models_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run10/models\n",
+      "opt_state_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run10/models/opt_state\n",
       "pre_path \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/pretrained/s32_p8_l2_det2_1lr-4_i1000.pk\n",
-      "timing_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run7/events/timing\n",
+      "timing_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/pmap/experiments/Be/junk/kfac_1lr-4_1d-4_1nc-4_m8_s32_p8_l2_det2/run10/events/timing\n",
       "system \t\t Be\n",
       "r_atoms \t\t [[0. 0. 0.]]\n",
       "z_atoms \t\t [4.]\n",
@@ -224,9 +224,9 @@
      "text": [
       "(4, 2, 4, 3)\n",
       "cpu:2\n",
-      "50 µs ± 1.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
-      "30 µs ± 1.51 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
-      "7.36 µs ± 33.9 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "50.4 µs ± 2.69 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "29.3 µs ± 837 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "7.86 µs ± 125 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     },
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "mechanical-making",
    "metadata": {},
    "outputs": [],
@@ -280,19 +280,25 @@
     "    def _forward_pass(params, walkers, d0s):\n",
     "\n",
     "        e_locs = lax.stop_gradient(compute_energy(params, walkers, d0s))\n",
+    "        \n",
+    "        # takes the mean of the data on each device and does not distribute\n",
     "        e_locs_centered = clip_and_center(e_locs)\n",
     "        log_psi = vwf(params, walkers, d0s)\n",
     "        \n",
-    "        # jax.device_put(e_locs).reshape(-1) this doesn't work on the inside of the function\n",
     "        return jnp.mean(e_locs_centered * log_psi), e_locs\n",
     "    \n",
-    "    grad_fn = jit(grad(_forward_pass, has_aux=True))\n",
+    "    grad_fn = pmap(jit(grad(_forward_pass, has_aux=True)), in_axes=(None, 0, 0))\n",
     "    \n",
+    "    # inside the pmapped function you can't 'undevice' the variables\n",
     "    def _grad_fn(params, walkers, d0s):\n",
     "        grads, e_locs = grad_fn(params, walkers, d0s)\n",
-    "        return jax.lax.pmean(grads, axis_name='g'), e_locs\n",
+    "        grads = jax.device_put(grads, jax.devices()[0])\n",
+    "        grads, tree = tree_flatten(grads)\n",
+    "        grads = [g.mean(0) for g in grads]\n",
+    "        grads = tree_unflatten(tree, grads)\n",
+    "        return grads, jax.device_put(e_locs, jax.devices()[0]).reshape(-1)\n",
     "    \n",
-    "    return pmap(_grad_fn, in_axes=(None, 0, 0), axis_name='g')\n",
+    "    return _grad_fn\n",
     "\n",
     "pgrad_fn = create_grad_function(wf, mol)\n",
     "grads, e_locs = pgrad_fn(params, walkers, d0s)"
@@ -300,27 +306,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "superior-variable",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 32)\n",
+      "(13, 32)\n",
+      "(5, 8)\n",
+      "(64, 32)\n",
+      "(49, 32)\n",
+      "(9, 8)\n",
+      "(64, 32)\n",
+      "(49, 32)\n",
+      "(9, 8)\n",
+      "(33, 4)\n",
+      "(33, 4)\n",
+      "(3, 12)\n",
+      "(3, 12)\n",
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "(1, 1)\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n",
+      "cpu:0\n"
+     ]
+    }
+   ],
    "source": [
     "flat_grads, tree = tree_flatten(grads)\n",
     "[print(v.shape) for v in flat_grads] \n",
+    "[print(v.device()) for v in flat_grads] \n",
     "a = jnp.zeros((flat_grads[0].shape[-1],))\n",
     "\n",
     "print(a.device_buffer.device())\n",
     "\n",
-    "print(e_locs.reshape(-1).shape)\n",
-    "print(flat_grads[-1].device())"
+    "print(e_locs.reshape(-1).device())\n",
+    "# print(flat_grads[-1].device())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "patent-invalid",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g (8, 32)\n",
+      "a (8, 8)\n",
+      "s (32, 32)\n",
+      "maa (8, 8)\n",
+      "mss (32, 32)\n",
+      "g (13, 32)\n",
+      "a (13, 13)\n",
+      "s (32, 32)\n",
+      "maa (13, 13)\n",
+      "mss (32, 32)\n",
+      "g (5, 8)\n",
+      "a (5, 5)\n",
+      "s (8, 8)\n",
+      "maa (5, 5)\n",
+      "mss (8, 8)\n",
+      "g (64, 32)\n",
+      "a (64, 64)\n",
+      "s (32, 32)\n",
+      "maa (64, 64)\n",
+      "mss (32, 32)\n",
+      "g (49, 32)\n",
+      "a (49, 49)\n",
+      "s (32, 32)\n",
+      "maa (49, 49)\n",
+      "mss (32, 32)\n",
+      "g (9, 8)\n",
+      "a (9, 9)\n",
+      "s (8, 8)\n",
+      "maa (9, 9)\n",
+      "mss (8, 8)\n",
+      "g (64, 32)\n",
+      "a (64, 64)\n",
+      "s (32, 32)\n",
+      "maa (64, 64)\n",
+      "mss (32, 32)\n",
+      "g (49, 32)\n",
+      "a (49, 49)\n",
+      "s (32, 32)\n",
+      "maa (49, 49)\n",
+      "mss (32, 32)\n",
+      "g (9, 8)\n",
+      "a (9, 9)\n",
+      "s (8, 8)\n",
+      "maa (9, 9)\n",
+      "mss (8, 8)\n",
+      "g (33, 4)\n",
+      "a (33, 33)\n",
+      "s (4, 4)\n",
+      "maa (33, 33)\n",
+      "mss (4, 4)\n",
+      "g (33, 4)\n",
+      "a (33, 33)\n",
+      "s (4, 4)\n",
+      "maa (33, 33)\n",
+      "mss (4, 4)\n",
+      "g (3, 12)\n",
+      "a (3, 3)\n",
+      "s (12, 12)\n",
+      "maa (3, 3)\n",
+      "mss (12, 12)\n",
+      "g (3, 12)\n",
+      "a (3, 3)\n",
+      "s (12, 12)\n",
+      "maa (3, 3)\n",
+      "mss (12, 12)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n",
+      "g (1, 1)\n",
+      "a (1, 1)\n",
+      "s (1, 1)\n",
+      "maa (1, 1)\n",
+      "mss (1, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "def update_maa_and_mss(step, maa, aa, mss, ss):\n",
     "    cov_moving_weight = jnp.min(jnp.array([step, 0.95])) \n",
@@ -337,7 +507,7 @@
     "    kfac_update, substate = create_natural_gradients_fn(kfac_wf, wf, mol, params, walkers, d0s)\n",
     "\n",
     "    def _get_params(state):\n",
-    "        return x[0]\n",
+    "        return state[0]\n",
     "\n",
     "    def _update(step, grads, state):\n",
     "        params = _get_params(state)\n",
@@ -367,48 +537,25 @@
     "def create_natural_gradients_fn(kfac_wf, wf, mol, params, walkers, d0s):\n",
     "\n",
     "    sensitivities_fn = create_sensitivities_grad_fn(kfac_wf)\n",
-    "    # grad_fn = create_grad_function(wf, mol)\n",
     "    vwf = pmap(jit(vmap(kfac_wf, in_axes=(None, 0, 0))), in_axes=(None, 0, 0))\n",
     "\n",
-    "    @jit\n",
-    "    def _kfac_step(step, gradients, activations, sensitivities, maas, msss, lr, damping, norm_constraint):\n",
+    "    def _kfac_step(step, gradients, aas, sss, maas, msss, sl_factors, lr, damping, norm_constraint):\n",
     "\n",
     "        gradients, gradients_tree_map = tree_flatten(gradients)\n",
-    "        activations, activations_tree_map = tree_flatten(activations)\n",
-    "        sensitivities, sensitivities_tree_map = tree_flatten(sensitivities)\n",
-    "\n",
     "        ngs = []\n",
     "        new_maas = []\n",
     "        new_msss = []\n",
-    "        for g, a, s, maa, mss in zip(gradients, activations, sensitivities, maas, msss):\n",
+    "        for g, aa, ss, maa, mss, sl_factor in zip(gradients, aas, sss, maas, msss, sl_factors):\n",
     "            \n",
     "            print('g', g.shape)\n",
-    "            print('a', a.shape)\n",
-    "            print('s', s.shape)\n",
+    "            print('a', aa.shape)\n",
+    "            print('s', ss.shape)\n",
     "            print('maa', maa.shape)\n",
     "            print('mss', mss.shape)\n",
-    "            \n",
-    "            n = a.shape[1]\n",
-    "            sl_factor = 1.\n",
-    "\n",
-    "            if len(a.shape) == 4:\n",
-    "                sl_factor = float(a.shape[2] ** 2)\n",
-    "                a = a.mean(2)\n",
-    "            if len(s.shape) == 4:\n",
-    "                sl_factor = float(s.shape[2] ** 2)\n",
-    "                s = s.mean(2)\n",
-    "                \n",
-    "            print(a.shape, s.shape, jnp.transpose(a))\n",
-    "\n",
-    "            aa = jnp.transpose(a, axes=(0, 2, 1)) @ a / float(n)\n",
-    "            ss = jnp.transpose(s, axes=(0, 2, 1)) @ s / float(n)\n",
     "\n",
     "            maa, mss = update_maa_and_mss(step, maa, aa, mss, ss)\n",
     "            \n",
-    "            smaa = jax.device_put(maa, jax.devices()[0]).mean(0)\n",
-    "            smss = jax.device_put(mss, jax.devices()[0]).mean(0)\n",
-    "            \n",
-    "            dmaa, dmss = damp(smaa, smss, sl_factor, damping)\n",
+    "            dmaa, dmss = damp(maa, mss, sl_factor, damping)\n",
     "\n",
     "            # chol_dmaa = jnp.linalg.cholesky(dmaa)\n",
     "            # chol_dmss = jnp.linalg.cholesky(dmss)\n",
@@ -419,11 +566,11 @@
     "            chol_dmaa = jax.scipy.linalg.cho_factor(dmaa)\n",
     "            chol_dmss = jax.scipy.linalg.cho_factor(dmss)\n",
     "\n",
-    "            inv_dmaa = jax.scipy.linalg.cho_solve(chol_dmaa, jnp.eye(smaa.shape[0]))  # , check_finite=False for performance\n",
-    "            inv_dmss = jax.scipy.linalg.cho_solve(chol_dmss, jnp.eye(smss.shape[0]))\n",
+    "            inv_dmaa = jax.scipy.linalg.cho_solve(chol_dmaa, jnp.eye(maa.shape[0]))  # , check_finite=False for performance\n",
+    "            inv_dmss = jax.scipy.linalg.cho_solve(chol_dmss, jnp.eye(mss.shape[0]))\n",
     "\n",
     "            # the zero index takes the values on device 0\n",
-    "            ng = inv_dmaa @ g[0] @ inv_dmss / sl_factor\n",
+    "            ng = inv_dmaa @ g @ inv_dmss / sl_factor\n",
     "\n",
     "            # vals_dmaa, vecs_dmaa = jnp.linalg.eigh(dmaa)\n",
     "            # vals_dmss, vecs_dmss = jnp.linalg.eigh(dmss)\n",
@@ -439,17 +586,50 @@
     "\n",
     "        return [lr * eta * ng for ng in ngs], (new_maas, new_msss, lr, damping, norm_constraint)\n",
     "\n",
-    "    kfac_step = pmap(_kfac_step, in_axes=(None, 0, 0, 0, 0, 0, None, None, None), axis_name='k')\n",
+    "    def _compute_covariances(activations, sensitivities):\n",
+    "        \n",
+    "        activations, activations_tree_map = tree_flatten(activations)\n",
+    "        sensitivities, sensitivities_tree_map = tree_flatten(sensitivities)\n",
+    "        \n",
+    "        aas = []\n",
+    "        sss = []\n",
+    "        sl_factors = []\n",
+    "        for a, s in zip(activations, sensitivities):\n",
+    "            n = a.shape[0]\n",
+    "            sl_factor = 1.\n",
     "\n",
+    "            if len(a.shape) == 3:\n",
+    "                sl_factor = float(a.shape[1] ** 2)\n",
+    "                a = a.mean(1)\n",
+    "            if len(s.shape) == 3:\n",
+    "                sl_factor = float(s.shape[1] ** 2)\n",
+    "                s = s.mean(1)\n",
+    "\n",
+    "            aa = jnp.transpose(a) @ a / float(n)\n",
+    "            ss = jnp.transpose(s) @ s / float(n)\n",
+    "            \n",
+    "            aas.append(aa)\n",
+    "            sss.append(ss)\n",
+    "            sl_factors.append(sl_factor)\n",
+    "        \n",
+    "        return aas, sss, sl_factors\n",
+    "    \n",
+    "    \n",
+    "    compute_covariances = pmap(jit(_compute_covariances), in_axes=(0, 0))\n",
+    "        \n",
+    "        \n",
     "    def _compute_natural_gradients(step, grads, state, walkers, d0s):\n",
     "\n",
     "        params, maas, msss, lr, damping, norm_constraint = state\n",
-    "        # yes there is a more efficient way of doing this.\n",
-    "        # It can be reduced by 1 forward passes and 1 backward pass\n",
+    "        \n",
     "        _, activations = vwf(params, walkers, d0s)\n",
     "        sensitivities = sensitivities_fn(params, walkers, d0s)\n",
-    "\n",
-    "        ngs, state = _kfac_step(step, grads, activations, sensitivities, maas, msss, lr, damping, norm_constraint)\n",
+    "        aas, sss, sl_factors = compute_covariances(activations, sensitivities)\n",
+    "        aas = [jax.device_put(aa, jax.devices()[0]).mean(0) for aa in aas]\n",
+    "        sss = [jax.device_put(ss, jax.devices()[0]).mean(0) for ss in sss]\n",
+    "        sl_factors = [s[0] for s in sl_factors]\n",
+    "        \n",
+    "        ngs, state = _kfac_step(step, grads, aas, sss, maas, msss, sl_factors, lr, damping, norm_constraint)\n",
     "\n",
     "        return ngs, (params, *state)\n",
     "\n",
@@ -458,14 +638,11 @@
     "\n",
     "    activations, activations_tree_map = tree_flatten(activations)\n",
     "    sensitivities, sensitivities_tree_map = tree_flatten(sensitivities)\n",
-    "    maas = [jnp.zeros((mol.n_devices, a.shape[-1], a.shape[-1])) for a in activations]\n",
-    "    msss = [jnp.zeros((mol.n_devices, s.shape[-1], s.shape[-1])) for s in sensitivities]\n",
+    "    maas = [jnp.zeros((a.shape[-1], a.shape[-1])) for a in activations]\n",
+    "    msss = [jnp.zeros((s.shape[-1], s.shape[-1])) for s in sensitivities]\n",
     "    substate = (params, maas, msss)\n",
     "\n",
     "    return _compute_natural_gradients, substate\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "update, get_params, kfac_update, state = kfac(kfac_wf, wf, mol, params, walkers, d0s, \n",
     "                                              lr=1e-4, damping=1e-3, norm_constraint=1e-3)\n",
@@ -476,34 +653,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seventh-livestock",
+   "id": "labeled-slide",
    "metadata": {},
    "outputs": [],
    "source": [
-    "[print(g[2].device()) for g in grads]\n",
-    "[print(g.shape) for g in grads]\n"
+    "# [print(g.device()) for g in kfac_grads]\n",
+    "[print(v.shape) for v in tree_flatten(grads)[0]]\n",
+    "# print(tree_flatten(grads))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arranged-combining",
+   "id": "dress-channels",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# print(state[0])\n",
-    "# print(state[1])\n",
-    "print(state[2])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "eight-workstation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "state = update(step, grads, state)\n",
+    "state = update(step, kfac_grads, state)\n",
     "\n",
     "params = get_params(state)\n"
    ]
@@ -522,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "adolescent-unemployment",
    "metadata": {},
    "outputs": [],
