--- a/src/scripts/debugging/pmap/sampler_pmap_test.ipynb
+++ b/src/scripts/debugging/pmap/sampler_pmap_test.ipynb
@@ -2,22 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "smart-theme",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "Devices:  [CpuDevice(id=0), CpuDevice(id=1), CpuDevice(id=2), CpuDevice(id=3)]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xmax/anaconda3/envs/xmax/lib/python3.8/site-packages/pyscf/lib/misc.py:46: H5pyDeprecationWarning: Using default_file_mode other than 'r' is deprecated. Pass the mode to h5py.File() instead.\n",
+      "Devices:  [CpuDevice(id=0), CpuDevice(id=1), CpuDevice(id=2), CpuDevice(id=3)]\n",
+      "/home/xmax/anaconda3/envs/drop/lib/python3.7/site-packages/pyscf/lib/misc.py:46: H5pyDeprecationWarning: Using default_file_mode other than 'r' is deprecated. Pass the mode to h5py.File() instead.\n",
       "  h5py.get_config().default_file_mode = 'a'\n"
      ]
     }
@@ -42,12 +36,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "powerful-flesh",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(4, 2)\n(4, 2, 2)\n(4, 1, 2)\n(4, 1, 2)\n(4, 2) (4, 2)\n(4, 2)\n(2,)\n(2,)\n(2,)\n(2,)\n(4, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "key_gen = lambda keys: [x.squeeze() for x in jnp.array([rnd.split(key) for key in keys]).split(2, axis=1)]"
+    "key_gen = lambda keys: [x.squeeze() for x in jnp.array([rnd.split(key) for key in keys]).split(2, axis=1)]\n",
+    "\n",
+    "\n",
+    "def key_gen(keys):\n",
+    "    \"\"\"\n",
+    "    keys: (n_devices, 2)\n",
+    "    Pseudocode:\n",
+    "        - generate the new keys for each device and put into a new array\n",
+    "        - split the array along axis 1 so there are 2 arrays (keys and subkeys)\n",
+    "        - squeeze the middle axis out\n",
+    "    \"\"\"\n",
+    "    print(keys.shape)\n",
+    "    keys = jnp.array([rnd.split(key) for key in keys])\n",
+    "    print(keys.shape)\n",
+    "    keys = jnp.split(keys, 2, axis=1)\n",
+    "    [print(k.shape) for k in keys]\n",
+    "    k = [x.squeeze(axis=1) for x in keys]\n",
+    "    print(k[0].shape, k[1].shape)\n",
+    "    return [x.squeeze(axis=1) for x in keys]\n",
+    "\n",
+    "n_dev = 4\n",
+    "key = rnd.PRNGKey(1)\n",
+    "keys = rnd.split(key, n_dev).reshape(n_dev, 2)\n",
+    "keys, subkeys = key_gen(keys)\n",
+    "\n",
+    "print(keys.shape)\n",
+    "[print(k.shape) for k in subkeys]\n",
+    "print(subkeys.shape)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -245,9 +276,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3710jvsc74a57bd06a06ed5d66c445098e60644b3382a69ae819b798ccad00addeea91043a2d37cf",
+   "display_name": "Python 3.7.10 64-bit ('drop': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -259,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
