updates to the minimum image convention and the LiSolid system description

--- a/src/scripts/debugging/ewalds/demo_convergence.ipynb
+++ b/src/scripts/debugging/ewalds/demo_convergence.ipynb
@@ -53,6 +53,89 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def create_potential_energy(mol, real_lattice, reciprocal_lattice):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    Notes:\n",
+    "        - May need to shift the origin to the center to enforce the spherical sum condition\n",
+    "        - I am now returning to length of unit cell units which is different to the unit cell length I was using before. How does this affect the computation?\n",
+    "        - Is the reciprocal height computed in the correct way?\n",
+    "    \"\"\"\n",
+    "    if mol.periodic_boundaries:\n",
+    "        \n",
+    "        real_basis = mol.real_basis\n",
+    "        reciprocal_basis = mol.reciprocal_basis\n",
+    "        kappa = mol.kappa\n",
+    "        volume = mol.volume\n",
+    "\n",
+    "          # (n_lattice, 3)\n",
+    "        rl_inner_product = inner(reciprocal_lattice, reciprocal_lattice)\n",
+    "        rl_factor = (4*jnp.pi / volume) * jnp.exp(- rl_inner_product / (4*kappa**2)) / rl_inner_product  \n",
+    "\n",
+    "        e_charges = jnp.array([-1. for i in range(mol.n_el)])\n",
+    "        charges = jnp.concatenate([mol.z_atoms, e_charges], axis=0)  # (n_particle, )\n",
+    "        q_q = charges[None, :] * charges[:, None]  # q_i * q_j  (n_particle, n_particle)\n",
+    "\n",
+    "        def compute_potential_energy_solid_i(walkers, r_atoms, z_atoms):\n",
+    "\n",
+    "            \"\"\"\n",
+    "            :param walkers (n_el, 3):\n",
+    "            :param r_atoms (n_atoms, 3):\n",
+    "            :param z_atoms (n_atoms, ):\n",
+    "\n",
+    "            Pseudocode:\n",
+    "                - compute the potential energy (pe) of the cell\n",
+    "                - compute the pe of the cell electrons with electrons outside\n",
+    "                - compute the pe of the cell electrons with nuclei outside\n",
+    "                - compute the pe of the cell nuclei with nuclei outside\n",
+    "            \"\"\"\n",
+    "\n",
+    "            # put the walkers and r_atoms together\n",
+    "            walkers = jnp.concatenate([r_atoms, walkers], axis=0)  # (n_particle, 3)\n",
+    "\n",
+    "            # compute the Rs0 term\n",
+    "            p_p_vectors = vector_sub(walkers, walkers)\n",
+    "            p_p_distances = compute_distances(walkers, walkers)\n",
+    "            # p_p_distances[p_p_distances < 1e-16] = 1e200  # doesn't matter, diagonal dropped, this is just here to suppress the error\n",
+    "            Rs0 = jnp.tril(erfc(kappa * p_p_distances) / p_p_distances, k=-1)  # is half the value\n",
+    "\n",
+    "            # compute the Rs > 0 term\n",
+    "            ex_walkers = vector_add(walkers, real_lattice)  # (n_particle, n_lattice, 3)\n",
+    "            tmp = walkers[:, None, None, :] - ex_walkers[None, ...]  # (n_particle, n_particle, n_lattice, 3)\n",
+    "            ex_distances = jnp.sqrt(jnp.sum(tmp**2, axis=-1))  \n",
+    "            Rs1 = jnp.sum(erfc(kappa * ex_distances) / ex_distances, axis=-1)\n",
+    "            real_sum = (q_q * (Rs0 + 0.5 * Rs1)).sum((-1, -2))\n",
+    "            \n",
+    "            # compute the constant factor\n",
+    "            self_interaction = - 0.5 * jnp.diag(q_q * 2 * kappa / jnp.sqrt(jnp.pi)).sum()\n",
+    "            constant = - 0.5 * charges.sum()**2 * jnp.pi / (kappa**2 * volume)  # is zero in neutral case\n",
+    "\n",
+    "            # compute the reciprocal term reuse the ee vectors\n",
+    "            exp = jnp.real(jnp.sum(rl_factor[None, None, :] * jnp.exp(1j * p_p_vectors @ jnp.transpose(reciprocal_lattice)), axis=-1))\n",
+    "            reciprocal_sum = 0.5 * (q_q * exp).sum((-1,-2))\n",
+    "            \n",
+    "            potential = real_sum + reciprocal_sum + constant + self_interaction\n",
+    "            # return potential\n",
+    "            return real_sum, reciprocal_sum, potential\n",
+    "\n",
+    "        return vmap(compute_potential_energy_solid_i, in_axes=(0, None, None))\n",
+    "\n",
+    "    return vmap(compute_potential_energy_i, in_axes=(0, None, None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -62,27 +145,27 @@
      "name": "stderr",
      "text": [
       "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n",
-      "version \t\t 180521\n",
+      "version \t\t 200521\n",
       "seed \t\t 369\n",
       "n_devices \t\t 1\n",
       "save_every \t\t 5000\n",
       "print_every \t\t 1\n",
-      "exp_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run3\n",
-      "events_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run3/events\n",
-      "models_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run3/models\n",
-      "opt_state_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run3/models/opt_state\n",
+      "exp_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run4\n",
+      "events_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run4/events\n",
+      "models_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run4/models\n",
+      "opt_state_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run4/models/opt_state\n",
       "pre_path \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/pretrained/s32_p8_l2_det4_1lr-4_i1000.pk\n",
-      "timing_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run3/events/timing\n",
+      "timing_dir \t\t /home/xmax/projects/nn_ansatz/src/scripts/debugging/ewalds/experiments/LiSolid/junk/kfac_1lr-4_1d-4_1nc-4_m128_s32_p8_l2_det4/run4/events/timing\n",
       "system \t\t LiSolid\n",
-      "r_atoms \t\t [[0.25 0.25 0.25]]\n",
+      "r_atoms \t\t [[0.16666664 0.23570225 0.40824828]]\n",
       "z_atoms \t\t [3.]\n",
       "n_el \t\t 3\n",
       "n_el_atoms \t\t [3]\n",
       "periodic_boundaries \t\t True\n",
-      "real_basis \t\t [[-0.5  0.5  0.5]\n",
-      " [ 0.5 -0.5  0.5]\n",
-      " [ 0.5  0.5 -0.5]]\n",
-      "unit_cell_length \t\t 7.407726\n",
+      "real_basis \t\t [[ 1.          0.          0.        ]\n",
+      " [-0.33333334  0.94280905  0.        ]\n",
+      " [-0.33333334 -0.47140455  0.81649655]]\n",
+      "unit_cell_length \t\t 2.9677114487\n",
       "real_cut \t\t 3\n",
       "reciprocal_cut \t\t 3\n",
       "kappa \t\t 1.0\n",
@@ -119,17 +202,17 @@
       "converged SCF energy = -7.31552598128109\n",
       "Cell: \n",
       " real_basis: \n",
-      " [[-3.703863  3.703863  3.703863]\n",
-      " [ 3.703863 -3.703863  3.703863]\n",
-      " [ 3.703863  3.703863 -3.703863]] \n",
+      " [[ 2.9677114  0.         0.       ]\n",
+      " [-0.9892372  2.7979853  0.       ]\n",
+      " [-0.9892372 -1.3989927  2.4231262]] \n",
       " reciprocal_basis: \n",
-      " [[0.        0.8481936 0.8481936]\n",
-      " [0.8481936 0.        0.8481936]\n",
-      " [0.8481936 0.8481936 0.       ]] \n",
+      " [[ 2.117182   0.7485369  1.296504 ]\n",
+      " [-0.         2.2456105  1.2965039]\n",
+      " [ 0.        -0.         2.5930078]] \n",
       " real_cut         = 3.00 \n",
       " reciprocal_cut   = 3 \n",
       " kappa            = 1.00 \n",
-      " volume           = 203.25 \n",
+      " volume           = 20.12 \n",
       "\n"
      ]
     }
@@ -182,9 +265,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "tags": [
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [
     {
@@ -638,83 +719,7 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def create_potential_energy(mol, real_lattice, reciprocal_lattice):\n",
-    "    \"\"\"\n",
-    "\n",
-    "    Notes:\n",
-    "        - May need to shift the origin to the center to enforce the spherical sum condition\n",
-    "        - I am now returning to length of unit cell units which is different to the unit cell length I was using before. How does this affect the computation?\n",
-    "        - Is the reciprocal height computed in the correct way?\n",
-    "    \"\"\"\n",
-    "    if mol.periodic_boundaries:\n",
-    "        \n",
-    "        real_basis = mol.real_basis\n",
-    "        reciprocal_basis = mol.reciprocal_basis\n",
-    "        kappa = mol.kappa\n",
-    "        volume = mol.volume\n",
-    "\n",
-    "          # (n_lattice, 3)\n",
-    "        rl_inner_product = inner(reciprocal_lattice, reciprocal_lattice)\n",
-    "        rl_factor = (4*jnp.pi / volume) * jnp.exp(- rl_inner_product / (4*kappa**2)) / rl_inner_product  \n",
-    "\n",
-    "        e_charges = jnp.array([-1. for i in range(mol.n_el)])\n",
-    "        charges = jnp.concatenate([mol.z_atoms, e_charges], axis=0)  # (n_particle, )\n",
-    "        q_q = charges[None, :] * charges[:, None]  # q_i * q_j  (n_particle, n_particle)\n",
-    "\n",
-    "        def compute_potential_energy_solid_i(walkers, r_atoms, z_atoms):\n",
-    "\n",
-    "            \"\"\"\n",
-    "            :param walkers (n_el, 3):\n",
-    "            :param r_atoms (n_atoms, 3):\n",
-    "            :param z_atoms (n_atoms, ):\n",
-    "\n",
-    "            Pseudocode:\n",
-    "                - compute the potential energy (pe) of the cell\n",
-    "                - compute the pe of the cell electrons with electrons outside\n",
-    "                - compute the pe of the cell electrons with nuclei outside\n",
-    "                - compute the pe of the cell nuclei with nuclei outside\n",
-    "            \"\"\"\n",
-    "\n",
-    "            # put the walkers and r_atoms together\n",
-    "            walkers = jnp.concatenate([r_atoms, walkers], axis=0)  # (n_particle, 3)\n",
-    "\n",
-    "            # compute the Rs0 term\n",
-    "            p_p_vectors = vector_sub(walkers, walkers)\n",
-    "            p_p_distances = compute_distances(walkers, walkers)\n",
-    "            # p_p_distances[p_p_distances < 1e-16] = 1e200  # doesn't matter, diagonal dropped, this is just here to suppress the error\n",
-    "            Rs0 = jnp.tril(erfc(kappa * p_p_distances) / p_p_distances, k=-1)  # is half the value\n",
-    "\n",
-    "            # compute the Rs > 0 term\n",
-    "            ex_walkers = vector_add(walkers, real_lattice)  # (n_particle, n_lattice, 3)\n",
-    "            tmp = walkers[:, None, None, :] - ex_walkers[None, ...]  # (n_particle, n_particle, n_lattice, 3)\n",
-    "            ex_distances = jnp.sqrt(jnp.sum(tmp**2, axis=-1))  \n",
-    "            Rs1 = jnp.sum(erfc(kappa * ex_distances) / ex_distances, axis=-1)\n",
-    "            real_sum = (q_q * (Rs0 + 0.5 * Rs1)).sum((-1, -2))\n",
-    "            \n",
-    "            # compute the constant factor\n",
-    "            self_interaction = - 0.5 * jnp.diag(q_q * 2 * kappa / jnp.sqrt(jnp.pi)).sum()\n",
-    "            constant = - 0.5 * charges.sum()**2 * jnp.pi / (kappa**2 * volume)  # is zero in neutral case\n",
-    "\n",
-    "            # compute the reciprocal term reuse the ee vectors\n",
-    "            exp = jnp.real(jnp.sum(rl_factor[None, None, :] * jnp.exp(1j * p_p_vectors @ jnp.transpose(reciprocal_lattice)), axis=-1))\n",
-    "            reciprocal_sum = 0.5 * (q_q * exp).sum((-1,-2))\n",
-    "            \n",
-    "            potential = real_sum + reciprocal_sum + constant + self_interaction\n",
-    "            # return potential\n",
-    "            return real_sum, reciprocal_sum, potential\n",
-    "\n",
-    "        return vmap(compute_potential_energy_solid_i, in_axes=(0, None, None))\n",
-    "\n",
-    "    return vmap(compute_potential_energy_i, in_axes=(0, None, None))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
