walkers mapped to unit cell before... currently not working hmmmmm

--- a/src/scripts/debugging/cell/saverio_surface.ipynb
+++ b/src/scripts/debugging/cell/saverio_surface.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -95,6 +95,9 @@
     "        v_prim = v.dot(A_inv)\n",
     "        x_prim, y_prim = v_prim[0, 0], v_prim[0, 1]\n",
     "        x_primp, y_primp = eq100(x_prim), eq100(y_prim)\n",
+    "        # v = np.array([[x_primp, y_primp]]).dot(A)\n",
+    "        # x_primp, y_primp = v[0, 0], v[0, 1]\n",
+    "        \n",
     "        rp_prim = np.linalg.norm(np.array([x_primp, y_primp]))\n",
     "\n",
     "        data = [np.squeeze(i) for i in [x, y, xp, yp, x_prim, y_prim, x_primp, y_primp, r, rp_prim, np.exp(-3*r), np.exp(-3*rp), np.exp(-3*rp_prim)]]\n",
@@ -134,16 +137,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": ""
   },
   "orig_nbformat": 4
  },
