pre change to atom loop

--- a/src/debugger.ipynb
+++ b/src/debugger.ipynb
@@ -42,7 +42,7 @@
                 "               n_sh=32,\n",
                 "               step_size=0.02,\n",
                 "               n_ph=8,\n",
-                "               orbital_decay='isotropic',\n",
+                "               orbitals='isotropic',\n",
                 "               n_periodic_input=3,\n",
                 "               opt='adam',\n",
                 "               n_det=2,\n",
@@ -120,7 +120,7 @@
                         "n_det \t\t 2\n",
                         "scalar_inputs \t\t False\n",
                         "n_periodic_input \t\t 3\n",
-                        "orbital_decay \t\t isotropic\n",
+                        "orbitals \t\t isotropic\n",
                         "opt \t\t adam\n",
                         "lr \t\t 0.0001\n",
                         "damping \t\t 0.001\n",
