--- a/src/demos/move_atom_positions/lithium_increaseing_cell_size/demo_notebook copy.ipynb
+++ b/src/demos/move_atom_positions/lithium_increaseing_cell_size/demo_notebook copy.ipynb
@@ -52,7 +52,7 @@
     "                    step_size=0.02,\n",
     "                    n_ph=8,\n",
     "                    scalar_inputs=False,\n",
-    "                    orbital_decay=orbital,\n",
+    "                    orbitals=orbital,\n",
     "                    n_periodic_input=1,\n",
     "                    opt='adam',\n",
     "                    n_det=4,\n",
@@ -106,7 +106,7 @@
       "n_det \t\t 4\n",
       "scalar_inputs \t\t False\n",
       "n_periodic_input \t\t 1\n",
-      "orbital_decay \t\t anisotropic\n",
+      "orbitals \t\t anisotropic\n",
       "opt \t\t adam\n",
       "lr \t\t 0.0001\n",
       "damping \t\t 0.001\n",
@@ -258,7 +258,7 @@
       "n_det \t\t 4\n",
       "scalar_inputs \t\t False\n",
       "n_periodic_input \t\t 1\n",
-      "orbital_decay \t\t anisotropic\n",
+      "orbitals \t\t anisotropic\n",
       "opt \t\t adam\n",
       "lr \t\t 0.0001\n",
       "damping \t\t 0.001\n",
@@ -410,7 +410,7 @@
       "n_det \t\t 4\n",
       "scalar_inputs \t\t False\n",
       "n_periodic_input \t\t 1\n",
-      "orbital_decay \t\t anisotropic\n",
+      "orbitals \t\t anisotropic\n",
       "opt \t\t adam\n",
       "lr \t\t 0.0001\n",
       "damping \t\t 0.001\n",
