--- a/src/scripts/debugging/ewalds/demo_convergence.ipynb
+++ b/src/scripts/debugging/ewalds/demo_convergence.ipynb
@@ -209,7 +209,7 @@
       "n_det \t\t 2\n",
       "scalar_inputs \t\t False\n",
       "n_periodic_input \t\t 3\n",
-      "orbital_decay \t\t anisotropic\n",
+      "orbitals \t\t anisotropic\n",
       "opt \t\t kfac\n",
       "lr \t\t 0.0001\n",
       "damping \t\t 0.001\n",
