--- a/src/scripts/debugging/validation/180621_clean.ipynb
+++ b/src/scripts/debugging/validation/180621_clean.ipynb
@@ -278,7 +278,7 @@
       "n_det \t\t 2\n",
       "scalar_inputs \t\t False\n",
       "n_periodic_input \t\t 2\n",
-      "orbital_decay \t\t anisotropic\n",
+      "orbitals \t\t anisotropic\n",
       "opt \t\t kfac\n",
       "lr \t\t 0.0001\n",
       "damping \t\t 0.001\n",
@@ -362,13 +362,13 @@
    "source": [
     "# DIFFERENT ORBITALS\n",
     "\n",
-    "orbital_decays = ['anisotropic']\n",
+    "orbitalss = ['anisotropic']\n",
     "systems = ['LiSolid']\n",
-    "for od in orbital_decays:\n",
+    "for od in orbitalss:\n",
     "    for system in systems:\n",
     "        for i in range(2, 3):\n",
     "            name = '%s_%s_%s' % (od, 'sin%i' % i, 'unitcube_stopgradminim')\n",
-    "            cfg = setup(system=system, orbital_decay=od, n_it=1001, name=name, n_periodic_input=i)\n",
+    "            cfg = setup(system=system, orbitals=od, n_it=1001, name=name, n_periodic_input=i)\n",
     "            logger = run_vmc(cfg)\n",
     "            od_datasets[name] = logger.data\n"
    ]
