--- a/src/scripts/validation/100921_periodic/periodic.ipynb
+++ b/src/scripts/validation/100921_periodic/periodic.ipynb
@@ -51,7 +51,7 @@
     "               n_sh=32,\n",
     "               step_size=0.02,\n",
     "               n_ph=8,\n",
-    "               orbital_decay=method,\n",
+    "               orbitals=method,\n",
     "               n_periodic_input=3,\n",
     "               opt='adam',\n",
     "               n_det=2,\n",
@@ -115,7 +115,7 @@
       "n_det \t\t 2\n",
       "scalar_inputs \t\t False\n",
       "n_periodic_input \t\t 3\n",
-      "orbital_decay \t\t anisotropic\n",
+      "orbitals \t\t anisotropic\n",
       "opt \t\t adam\n",
       "lr \t\t 0.0001\n",
       "damping \t\t 0.001\n",
