--- a/src/demos/move_atom_positions/Li_translating_system/demo_notebook.ipynb
+++ b/src/demos/move_atom_positions/Li_translating_system/demo_notebook.ipynb
@@ -74,7 +74,7 @@
       "n_det \t\t 4\n",
       "scalar_inputs \t\t False\n",
       "n_periodic_input \t\t 1\n",
-      "orbital_decay \t\t anisotropic\n",
+      "orbitals \t\t anisotropic\n",
       "opt \t\t adam\n",
       "lr \t\t 0.0001\n",
       "damping \t\t 0.001\n",
@@ -185,7 +185,7 @@
     "                step_size=0.02,\n",
     "                n_ph=8,\n",
     "                scalar_inputs=False,\n",
-    "                orbital_decay='anisotropic',\n",
+    "                orbitals='anisotropic',\n",
     "                n_periodic_input=1,\n",
     "                opt='adam',\n",
     "                n_det=4,\n",
